[package]
name = "cardinal-generator"
version = "0.1.0"
description = "Cardinal generator"
edition = "2021"
homepage = "https://cardinal.so"
repository = "https://github.com/cardinal-labs/cardinal-generator/tree/main/programs/cardinal-generator"
authors = ["Jeremy Bogle <jeremy@cardinal.so>"]
license = "AGPL-3.0"
keywords = ["solana", "cardinal", "generator"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cardinal_generator"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.22.0", features = ["init-if-needed"] }
anchor-spl = "0.22.0"
solana-program = "1.9.29"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.2.5", features = ["no-entrypoint"] }

[dev-dependencies]
proptest = { version = "1.0" }
