[package]
name = "solana-nft-programs-generator"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
keywords = ["solana", "generator"]

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_nft_programs_generator"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.22.0", features = ["init-if-needed"] }
anchor-spl = "0.22.0"
solana-program = "1.8.1"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.2.5", features = ["no-entrypoint"] }

[dev-dependencies]
proptest = { version = "1.0" }
